<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="myths_account">Quick account：</string>
    <string name="myths_account_tips1">Dear user, welcome to the gaming world! Please bind your account for a better experience. We look forward to exploring together with you!</string>
    <string name="myths_account_tips1_1">(To ensure account security, please to bind)</string>
    <string name="myths_account_tips2">Logging in</string>
    <string name="myths_account_tips3">Please enter your username</string>
    <string name="myths_account_tips4">Please enter your password</string>
    <string name="myths_account_change">Switch account</string>
    <string name="myths_login_tip">Log in with</string>
    <string name="myths_fastlogin">Quick login</string>
    <string name="myths_acclogin">Use account</string>
    <string name="myths_facebooklogin">Facebook</string>
    <string name="myths_googlelogin">Google</string>
    <string name="myths_wclogin">Wallet</string>
    <string name="myths_applelogin">sign in with Apple</string>
    <string name="myths_policy_tips">I have read and agreed to</string>
    <string name="myths_policy_con">Privacy Policy</string>
    <string name="myths_game_hint">Game：</string>
    <string name="myths_product_hint">Item</string>
    <string name="myths_price_hint">Dollar</string>
    <string name="myths_choose_hint">Please choose a payment method:</string>
    <string	name="myths_pay_commit_1">Use</string>
    <string name="myths_pay_commit_2">Pay</string>
    <string name="myths_acc_login">Sign in</string>
    <string name="myths_change_loginway">Switch login</string>
    <string name="myths_acc_hint">Please enter your username</string>
    <string name="myths_pas_hint">Please enter your password</string>
    <string name="myths_no_user">user does not exist</string>
    <string name="myths_no_url">Request url is empty</string>
    <string name="myths_paytitle">Select payment method</string>
    <string name="myths_paywallet_failed">payment failed</string>
    <string name="myths_paywallet_suc">Successful payment</string>
    <string name="myths_paywallet_con">Confirmation</string>
    <string name="myths_sandboxPay_suc">Sandbox payment successful</string>
    <string name="myths_wait">please wait</string>
    <string name="myths_wait_loadhw">Please download Huawei Game Center</string>
    <string name="myths_login_top">Login</string>
    <string name="myths_login_huawei">Sign in with HUAWEI</string>
    <string name="myths_login_google">Sign in with Google</string>
    <string name="myths_login_vk">Sign in with VK</string>
    <string name="myths_login_appbazar">Sign in with AppBazar</string>
    <string name="myths_account_bind_hw">Bind Huawei account</string>
    <string name="myths_login_email">Sign in with Email</string>
    <string name="myths_email_hint_acc">Please enter your email address</string>
    <string name="myths_email_hint_psd">Type in SMS code</string>
    <string name="myths_getCode">SMS code</string>
    <string name="myths_account_bind_email">Bind email</string>
    <string name="myths_exit_title">Tips</string>
    <string name="myths_exit_content">Are you sure you want to exit the game?</string>
    <string name="myths_exit_cancel">Cancel</string>
    <string name="myths_rupay_tips">Payment successful, please wait for the item to arrive~</string>
</resources>
