<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/myths_bg" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:id="@+id/pay_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginTop="@dimen/margin_top10"
                android:stateListAnimator="@null"
                android:background="@drawable/myths_cancle"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/title_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top55"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/game_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right20"
                android:layout_marginRight="@dimen/margin_right"
                android:gravity="center"
                android:text="@string/myths_game_hint"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/game_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myths_product_hint"
                android:gravity="center"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/pro_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right20"
                android:gravity="right"
                android:text="@string/myths_price_hint"
                android:textColor="@android:color/holo_blue_light"/>
        </LinearLayout>

        <TextView
            android:id="@+id/pay_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/margin_right20"
            android:layout_marginRight="@dimen/margin_right20"
            android:layout_marginTop="@dimen/margin_top10"
            android:layout_below="@+id/title_lay"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/choose_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top10"
            android:layout_below="@+id/pay_line"
            android:text="@string/myths_choose_hint"/>

        <GridView
            android:id="@+id/pay_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_right20"
            android:layout_marginRight="@dimen/margin_right20"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_below="@+id/choose_tv"
            android:gravity="center"
            android:horizontalSpacing="@dimen/horizontalSpace"
            android:numColumns="3"
            android:listSelector="@drawable/myths_pay_choose"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/pay_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/pay_list"
            android:layout_marginBottom="@dimen/margin_top10"
            android:gravity="center"
            android:text="@string/myths_pay_commit_2"
            android:textColor="@android:color/white"
            android:background="@drawable/myths_loginbtn"/>


    </RelativeLayout>

</LinearLayout>